src/components/project-view/Project.style.css
.project-container {
  height: fit-content;
  padding: 120px 30px;
}
.project-image-container {
  width: 65%;
}

.project-image {
  width: 100%;
  border-radius: 10px;
}

.project-text-container {
  width: 65%;

  display: flex;
  align-items: start;
  justify-content: space-between;
}

.project-title-container {
  height: fit-content;

  padding-left: 10px;

  display: flex;

  transform: translateX(-10px);
  transition: transform 0.25s ease-out;
}
.project-title-container:hover {
  transform: scale(1.1);
}
.project-link {
  text-decoration: none;
  color: inherit;

  display: flex;
  align-items: flex-start;
  gap: 1vmin;

  transition: color 0.3s;
}

.north-east-arrow {
  display: inline-block;

  transform: rotate(-45deg);
}

.project-description {
  width: 45%;

  padding-top: 7.5px;

  color: inherit;

  white-space: pre-wrap;

  transition: color 0.3s;
}

@media screen and (max-device-width: 414px) {
  .project-container {
    padding: 120px 17px;
  }
  .project-image-container {
    width: 100%;
  }
  .project-text-container {
    width: 100%;

    font-size: calc(12px + 2vmin);

    flex-direction: column;
    justify-content: space-between;
  }

  .project-description {
    width: 100%;
  }
}

